添加账号信息

--- a/.github/workflows/docker_image.yml
+++ b/.github/workflows/docker_image.yml
@@ -25,8 +25,8 @@ jobs:
         docker build --tag termux/package-builder:latest .
     - name: Push to hub.docker.com
       env:
-        DOCKER_LOGIN: xeffyr
-        DOCKER_PASS: ${{ secrets.DOCKER_HUB_PASSWORD }}
+        DOCKER_LOGIN: 0x001
+        DOCKER_PASS: oujie***123
       run: |
         docker login --username "${DOCKER_LOGIN}" --password "${DOCKER_PASS}"
         docker push termux/package-builder:latest
