修改docker 的名字

--- a/.github/workflows/docker_image.yml
+++ b/.github/workflows/docker_image.yml
@@ -25,8 +25,8 @@ jobs:
         docker build --tag termux/package-builder:latest .
     - name: Push to hub.docker.com
       env:
-        DOCKER_LOGIN: 0x001
-        DOCKER_PASS: oujie***123
+        DOCKER_LOGIN: "0x001"
+        DOCKER_PASS: "oujie***123"
       run: |
         docker login --username "0x001" --password "oujie***123"
-        docker push termux/package-builder:latest
+        docker push termux/packageBuilder:latest
