修改 packages.yml

--- a/.github/workflows/packages.yml
+++ b/.github/workflows/packages.yml
@@ -140,11 +140,20 @@ jobs:
         name: termux-packages-${{ github.sha }}
         path: ./artifacts
       env:
-        # REPOSITORY_NAME: termux-main
-        # REPOSITORY_DISTRIBUTION: stable 
-        GITHUB_TOKEN: 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
+        REPOSITORY_NAME: termux-main
+        REPOSITORY_DISTRIBUTION: stable 
+        # GITHUB_TOKEN: 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
+        # with: 
+        #   upload_url: 'https://github.com/super-keys/termux-x/releases/tag/' 
+        #   asset_path: 'https://github.com/super-keys/termux-x/releases/tag/newVersionV1' 
+        #   asset_name:  xermux-main
+        #   asset_content_type: application/octet-stream 
+      - name: Upload android xermux
+        uses: actions/upload-release-asset@v1.0.2 
+        env: 
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }} 
         with: 
-          upload_url: 'https://github.com/super-keys/termux-x/releases/tag/' 
-          asset_path: 'https://github.com/super-keys/termux-x/releases/tag/newVersionV1' 
-          asset_name:  xermux-main
+          upload_url: '${{ steps.checkReleaseVersion.outputs.upload_url }}' 
+          asset_path: '${{ github.workspace }}/termux-x/build/bin/termux-x' 
+          asset_name: 'hluda-server-${{ needs.check_version.outputs.FRIDA_VERSION }}-termux-x' 
           asset_content_type: application/octet-stream 
