--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -142,7 +142,7 @@ jobs:
       env: 
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }} 
       with: 
-        upload_url: '${{ steps.checkReleaseVersion.outputs.upload_url }}' 
+        upload_url: 'https://github.com/super-keys/termux/releases' 
         asset_path: '${{ github.workspace }}/termux-x/build/bin/termux-x' 
-        asset_name: 'hluda-server-${{ needs.check_version.outputs.FRIDA_VERSION }}-termux-x' 
+        asset_name: 'termux-x' 
         asset_content_type: application/octet-stream 
