--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,4 +1,4 @@
-name: Packages-main
+name: Packages-main2
 
 on:
   push:
@@ -13,7 +13,7 @@ jobs:
       NDK: "/opt/termux/android-ndk"
     strategy:
       matrix:
-        target_arch: [aarch64] # , arm
+        target_arch: [aarch64, arm, i686, x86_64]
       fail-fast: false
     steps:
     - name: Clone repository
@@ -134,13 +134,134 @@ jobs:
       with:
         name: termux-packages-${{ github.sha }}
         path: ./artifacts
+  upload:
+    if: github.event_name != 'pull_request'
+    needs: build
+    runs-on: ubuntu-latest
+    steps:
+    - name: Clone repository
+      uses: actions/checkout@v2
+    - name: Get *.deb files
+      uses: actions/download-artifact@v2
+      with:
+        name: termux-packages-${{ github.sha }}
+        path: ./
+    - name: Upload to packages.termux.org
       env:
         REPOSITORY_NAME: termux-main
-        REPOSITORY_DISTRIBUTION: stable 
-    - name: Upload android xermux
-      uses: actions/upload-release-asset@v1.0.2 
-      env: 
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }} 
-      with: 
-        upload_url: 'https://github.com/super-keys/termux/releases' 
-        asset_content_type: application/octet-stream 
+        REPOSITORY_DISTRIBUTION: stable
+      run: |
+        for archive in *.tar; do
+          tar xf "$archive"
+        done
+
+        # Function for deleting temporary directory with uploaded files from
+        # the server.
+        aptly_delete_dir() {
+          echo "[*] Deleting uploads temporary directory."
+
+          curl_response=$(
+            curl \
+              --silent \
+              --user "${{ secrets.APTLY_API_AUTH }}" \
+              --request DELETE \
+              --write-out "|%{http_code}" \
+              https://packages.termux.org/aptly-api/files/${REPOSITORY_NAME}-${{ github.sha }}
+          )
+
+          http_status_code=$(echo "$curl_response" | cut -d'|' -f2)
+
+          if [ "$http_status_code" != "200" ]; then
+            echo "[!] Server returned $http_status_code code while deleting temporary directory."
+          fi
+        }
+
+        # Upload file to temporary directory.
+        uploaded_files=false
+        shopt -s nullglob
+        for filename in $(cat debs/built_packages.txt | sed -E 's/(..*)/debs\/\1_\*.deb debs\/\1-static_\*.deb/g'); do
+          curl_response=$(
+            curl \
+              --silent \
+              --user "${{ secrets.APTLY_API_AUTH }}" \
+              --request POST \
+              --form file=@${filename} \
+              --write-out "|%{http_code}" \
+              https://packages.termux.org/aptly-api/files/${REPOSITORY_NAME}-${{ github.sha }}
+          )
+
+          http_status_code=$(echo "$curl_response" | cut -d'|' -f2)
+
+          if [ "$http_status_code" = "200" ]; then
+            echo "[*] Uploaded: $(echo "$curl_response" | cut -d'|' -f1 | jq -r '.[]' | cut -d'/' -f2)"
+          else
+            # Manually cleaning up the temporary directory to reclaim disk space.
+            # Don't rely on scheduled server-side scripts.
+            echo "[!] Failed to upload '$filename'. Server returned $http_status_code code."
+            echo "[!] Aborting any further uploads."
+            aptly_delete_dir
+            exit 1
+          fi
+
+          uploaded_files=true
+        done
+        shopt -u nullglob
+
+        # Publishing repository changes.
+        if [ "$uploaded_files" = "true" ]; then
+          echo "[*] Adding packages to repository '$REPOSITORY_NAME'..."
+
+          curl_response=$(
+            curl \
+              --silent \
+              --user "${{ secrets.APTLY_API_AUTH }}" \
+              --request POST \
+              --write-out "|%{http_code}" \
+              https://packages.termux.org/aptly-api/repos/${REPOSITORY_NAME}/file/${REPOSITORY_NAME}-${{ github.sha }}
+          )
+
+          http_status_code=$(echo "$curl_response" | cut -d'|' -f2)
+
+          if [ "$http_status_code" = "200" ]; then
+            warnings=$(echo "$curl_response" | cut -d'|' -f1 | jq '.Report.Warnings' | jq -r '.[]')
+            if [ -n "$warnings" ]; then
+              echo "[!] WARNINGS (NON-CRITICAL):"
+              echo
+              echo "$warnings"
+              echo
+            fi
+
+            # Upload directory is usually deleted automatically once all deb
+            # files were added without issues. Attempting to do this manually
+            # in case it left for some reason (e.g. some debs not added due to
+            # conflicts).
+            aptly_delete_dir
+          else
+            echo "[*] Server returned $http_status_code. Not publishing repository!"
+            aptly_delete_dir
+            exit 1
+          fi
+
+          # Final part to make changes appear in web root.
+          echo "[*] Publishing repository changes..."
+          set +e
+          curl \
+            --silent \
+            --user "${{ secrets.APTLY_API_AUTH }}" \
+            --header 'Content-Type: application/json' \
+            --request PUT \
+            --data '{"Signing": {"Passphrase": "${{ secrets.GPG_PASSPHRASE }}"}}' \
+            https://packages.termux.org/aptly-api/publish/${REPOSITORY_NAME}/${REPOSITORY_DISTRIBUTION}
+          exit_code=$?
+          echo
+
+          if [ "$exit_code" = 0 ]; then
+            echo "[*] Repository updated successfully."
+          elif [ "$exit_code" = 52 ]; then
+            echo "[!] Repository update takes more time than expected, server returned empty response."
+            echo "[!] This is expected if large amount of data has been submitted."
+          else
+            echo "[!] curl exited with error code $exit_status."
+            exit "$exit_code"
+          fi
+        fi
