--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -6,6 +6,10 @@ on:
     - master
     paths:
     - 'packages/**'
+  pull_request:
+    paths:
+    - 'packages/**'
+
 jobs:
   build:
     runs-on: ubuntu-latest
