--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -18,7 +18,7 @@ jobs:
       NDK: "/opt/termux/android-ndk"
     strategy:
       matrix:
-        target_arch: [aarch64]
+        target_arch: [aarch64, arm]
       fail-fast: false
     steps:
     - name: Clone repository
